Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-399

"Debugger running" text continues to be displayed even after program is terminated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 1.3.1
    • Qt Creator 1.3.0
    • Debugger
    • None
    • Windows XP, MSVC 2005, Qt 4.5.2, Qt Creator 1.3.0
    • 397b634aee53d1f3ea46cea962a3a836c94dded2

      "Debugger running" text displayed (to the right of the threads pull-down) even after program is terminated. This is reproducible by either stopping the program through the debugger GUI, or by closing program's QMainWindow.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            guitarinc1 Chris Matthews
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes