CDB: Fix messages displayed after stop of Debugger. Reviewed-by: hjk Task-number: QTCREATORBUG-399